--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3"
   },
